--- a/styles/game.css
+++ b/styles/game.css
@@ -26,6 +26,23 @@
   flex-direction: column;
   height: 100vh;
   padding: 1em;
+.mute-button {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  transition: transform 0.2s;
+}
+
+.mute-button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.mute-button:active {
+  transform: scale(0.98);
+}
+
 .top-bar {
   display: flex;
   align-items: baseline;
