--- a/styles/game.css
+++ b/styles/game.css
@@ -1,46 +1,115 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
-.body {
-  font-family: "Roboto";
-  --radius: 50%;
-  background-color: #202852;
+.game-table {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  max-width: 80vw;
+  max-height: 70vh;
+  margin: auto;
+  /* outline: 1px solid yellow; */
 }
 
+.board-wrapper {
+  /* board height & width set by resize observer in GameTable */
+  margin-top: 5rem;
+  margin-left: -1em;
+  flex: 5;
+  z-index: 1;
+  display: flex;
+
+  /* outline: 1px solid yellow; */
+}
 .board {
-  margin: 5%;
-  border: 17px solid #c74d4d;
+  box-shadow: -10px 2px 10px 10px var(--drop-shadow);
+  outline: 17px solid var(--foreground-color);
+}
+
+.square-decoration {
+  position: absolute;
+  top: 0;
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+  margin: 50% 0 0 50%;
+  transform: translate(-50%, -50%);
 }
 
 .board-square {
-  height: 12%;
-  width: 12%;
-  outline: 1px solid brown;
+  width: calc(100% / 8);
+  height: calc(100% / 8);
   float: left;
-  background-color: #f9e4d9;
-  box-shadow: 3px 3px 20px 4px #08070833 inset;
+  position: relative;
+  outline: 1px solid var(--foreground-color);
+  background-color: var(--board-color);
+  /* box-shadow: 3px 3px 20px 4px var(--drop-shadow) inset; */
+}
+
+.side-panel {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 1em;
+  margin-top: 5rem;
+  margin-right: -1em;
+  /* outline: 1px solid yellow; */
 }
 
 .control-panel {
-  flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  padding: 1em;
+  /* outline: 1px solid yellow; */
+}
+
+.side-info {
+  width: 14em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* outline: 1px solid yellow; */
+}
+
+.control {
+  flex: 1;
+  border: none;
+  padding: 0.5em;
+  margin: 0.2em;
+  min-height: 3em;
+  width: 14em;
+  background-color: var(--foreground-color);
+  border-radius: 5em 0 0 5em;
+}
+
+.control-text {
+  color: var(--primary-text-color);
+  margin: 0.2em;
+  margin-left: 1em;
+  width: 10em;
+  text-transform: uppercase;
+  vertical-align: middle;
+}
+
 .mute-button {
+  flex: 1;
+  align-self: center;
   display: flex;
   align-items: center;
   background-color: transparent;
   border: none;
+}
+
+@media (hover: hover) {
+  .springy:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+}
+
+.springy:active {
+  transform: scale(0.9);
+}
+
+.springy {
   transition: transform 0.2s;
-}
-
-.mute-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-.mute-button:active {
-  transform: scale(0.98);
 }
 
 .top-bar {
@@ -49,7 +118,7 @@
   align-content: flex-end;
   flex-wrap: wrap;
   max-width: 750px;
-  height: 70px;
+  min-height: 70px;
   padding-bottom: 5px;
   margin: auto;
   border-bottom: solid 1px var(--primary-text-color);
@@ -65,21 +134,129 @@
 }
 
 .link {
-  transition: transform 0.2s;
   margin-left: 1.1rem;
 }
 
-.link:hover {
-  transform: scale(1.1);
+.top-link-container {
+  display: flex;
+  flex-wrap: wrap;
 }
-
-.link:active {
-  transform: scale(0.9);
-}
-
-.control {
-  color: #eff1fe;
-  background-color: #c74d4d;
-  border-radius: var(--radius);
+.score-display-container {
+  flex: 2;
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
   text-transform: uppercase;
+  align-items: center;
+  justify-content: center;
+}
+
+.score-item {
+  flex: 1;
+  padding: 0.2em 2em 0.2em 0;
+  border-radius: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1em; /* aligns the 'turn state' background color*/
+}
+
+.score-item.turn {
+  background-color: var(--foreground-color);
+}
+
+.score-item-icon {
+  content: " ";
+  height: 1.5rem;
+  width: 1.5rem;
+  margin-right: 0.5rem;
+  border-radius: 1rem;
+  background-color: var(--primary-text-color);
+}
+
+.black .score-item-icon {
+  background-color: var(--black-stone);
+}
+
+.white .score-item-icon {
+  background-color: var(--primary-text-color);
+}
+
+.status {
+  margin-top: 1em;
+}
+
+/* @media (min-aspect-ratio: 0) and (max-aspect-ratio: 1) { */
+@media (max-width: 550px) {
+  .game-table {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .board-wrapper {
+    margin-top: 1em;
+    margin-left: 0;
+  }
+  .side-panel {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1em;
+    margin-right: 0;
+    width: 100%;
+  }
+
+  .control-panel {
+    width: 100%;
+    align-items: center;
+  }
+
+  .control {
+    border-radius: 5em;
+    padding: 0;
+    min-height: 1em;
+  }
+  .control-text {
+    margin-left: 0.2em;
+    font-size: 0.8em;
+    width: 100%;
+  }
+
+  .link {
+    margin-top: 0.5em;
+    margin-left: 0;
+  }
+
+  .top-link-container {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .top-bar {
+    align-items: flex-start;
+    margin: 5%;
+  }
+}
+
+.stone-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.stone {
+    height: 90%;
+    width: 90%;
+    border-radius: 50%;
+    margin: 5%;
+    box-shadow: 4px 4px 10px #4456;
+}
+
+.stone.white {
+  background-color: var(--primary-text-color);
+}
+
+.stone.black{
+  background-color: var(--black-stone);
 }
