--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
+:root {
+  --primary-text-color: #fefefe;
+  --foreground-color: #c74d4d;
+  --background-color: #202852;
+  --board-color: #f9e4d9;
+  --drop-shadow: #08070833;
+  --black-stone: #222;
+  
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Roboto, sans-serif;
-  /* font-family: PT Sans, Fira Sans, sans-serif, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif; */
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--primary-text-color);
+  background-color: var(--background-color);
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
 }
 
 a {
