--- a/styles/game.css
+++ b/styles/game.css
@@ -2,25 +2,25 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  max-width: 80vw;
-  max-height: 70vh;
+  /* max-width: 80vw; */
+  /* max-height: 70vh; */
   margin: auto;
   /* outline: 1px solid yellow; */
 }
 
 .board-wrapper {
   /* board height & width set by resize observer in GameTable */
-  margin-top: 5rem;
-  margin-left: -1em;
-  flex: 5;
+  margin-top: 2rem;
+  flex: 4;
   z-index: 1;
   display: flex;
+  justify-content: center;
 
   /* outline: 1px solid yellow; */
 }
 .board {
   box-shadow: -10px 2px 10px 10px var(--drop-shadow);
-  outline: 17px solid var(--foreground-color);
+  border: 17px solid var(--foreground-color);
 }
 
 .square-decoration {
@@ -40,31 +40,35 @@
   position: relative;
   outline: 1px solid var(--foreground-color);
   background-color: var(--board-color);
-  /* box-shadow: 3px 3px 20px 4px var(--drop-shadow) inset; */
 }
 
 .side-panel {
-  flex: 3;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   padding: 1em;
-  margin-top: 5rem;
-  margin-right: -1em;
+  margin-top: 2rem;
+  /* margin-right: -1em; */
   /* outline: 1px solid yellow; */
+}
+
+.spacer {
+  flex: 3;
 }
 
 .control-panel {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
   /* outline: 1px solid yellow; */
 }
 
 .side-info {
-  width: 14em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   /* outline: 1px solid yellow; */
 }
 
@@ -72,18 +76,17 @@
   flex: 1;
   border: none;
   padding: 0.5em;
-  margin: 0.2em;
-  min-height: 3em;
-  width: 14em;
+  margin: 0.2em 0;
+  min-height: 1.5em;
+  width: 130%;
   background-color: var(--foreground-color);
   border-radius: 5em 0 0 5em;
 }
 
 .control-text {
   color: var(--primary-text-color);
-  margin: 0.2em;
-  margin-left: 1em;
-  width: 10em;
+  margin: 0.2em 0;
+  min-width: 10em;
   text-transform: uppercase;
   vertical-align: middle;
 }
@@ -141,6 +144,7 @@
   display: flex;
   flex-wrap: wrap;
 }
+
 .score-display-container {
   flex: 2;
   margin: 1em;
@@ -202,7 +206,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     margin-right: 0;
     width: 100%;
   }
@@ -216,7 +220,9 @@
     border-radius: 5em;
     padding: 0;
     min-height: 1em;
+    width: 100%;
   }
+
   .control-text {
     margin-left: 0.2em;
     font-size: 0.8em;
@@ -246,17 +252,17 @@
 }
 
 .stone {
-    height: 90%;
-    width: 90%;
-    border-radius: 50%;
-    margin: 5%;
-    box-shadow: 4px 4px 10px #4456;
+  height: 90%;
+  width: 90%;
+  border-radius: 50%;
+  margin: 5%;
+  box-shadow: 4px 4px 10px #4456;
 }
 
 .stone.white {
   background-color: var(--primary-text-color);
 }
 
-.stone.black{
+.stone.black {
   background-color: var(--black-stone);
 }
