--- a/styles/game.css
+++ b/styles/game.css
@@ -266,3 +266,24 @@
 .stone.black {
   background-color: var(--black-stone);
 }
+
+/* Chess Game  */
+.piece {
+	outline: 1px solid lightpink;
+	height: 4em; 
+  line-height: 4em;
+	width: 4em; 
+	background: lightpink;
+	cursor: pointer;
+  text-align: center;
+  vertical-align: middle;
+  transition: 300ms ease; 
+}
+
+.piece:hover {
+  transform: scale(1.05);
+}
+
+.piece:active{
+  transform: scale(0.95);
+}
