--- a/styles/gridlines.css
+++ b/styles/gridlines.css
@@ -3,12 +3,10 @@
     grid-row: 0;
     color: var(--primary-text-color);
     background-color: var(--background-color);
-    outline: 1px dotted  var(--primary-text-color); 
     text-align: center;
     font-size: 1em;
     cursor: pointer;
     transition: transform 250ms linear;
-    border: 6px solid var(--background-color);
 }
 
 .square:hover{
@@ -20,28 +18,29 @@
 }
 
 .captured {
-    outline: 12px solid var(--foreground-color) ;
-    outline-offset: -6px;
+    /* outline: 12px solid var(--foreground-color) ; */
+    /* outline-offset: -6px; */
 }
 .edge {
-background-color: cadetblue;
+    background-color: cadetblue;
+    cursor: pointer;
+    transition: transform 250ms linear;
 }
 
 .edge:hover{
-
     background-color: pink;
 }
-.edge.captured{
 
+.edge.selected {
+    background-color: var(--foreground-color);
 }
 
 .board-grid{
     display: block; 
-    height: 80vh; 
+    height: 85vh; 
     width: 80vh;    
-    margin: auto;
     display: grid; 
-    grid-template-columns: 1em repeat(16, 0.5vw 6vw) 1em ;
-    grid-template-rows: 1em repeat(16, 0.5vh 6vh) 1em ;
+    grid-template-columns: auto repeat(24, 1vh 6vh) auto;
+    grid-template-rows: auto repeat(24, 1vh 6vh) auto;
     outline: 1px solid yellow;
 }
