--- a/styles/gridlines.css
+++ b/styles/gridlines.css
@@ -5,26 +5,26 @@
     background-color: var(--background-color);
     text-align: center;
     font-size: 1em;
-    cursor: pointer;
     transition: transform 250ms linear;
-}
-
-.square:hover{
-    background-color:var(--foreground-color);
 }
 
 .square.captured {
-    background-color:var(--foreground-color);
+    background-color: var(--background-color);
 }
 
-.captured {
-    /* outline: 12px solid var(--foreground-color) ; */
-    /* outline-offset: -6px; */
-}
-.edge {
-    background-color: cadetblue;
+.square ~ .incoming {
     cursor: pointer;
-    transition: transform 250ms linear;
+}
+
+.edge {
+    background-clip: content-box;
+    cursor: pointer;
+    transition: 50ms ease-out;
+}
+.incoming {
+    background-color: pink;
+    cursor: pointer;
+    transition: 300ms ease-out;
 }
 
 .edge:hover{
@@ -35,12 +35,19 @@
     background-color: var(--foreground-color);
 }
 
+.corner {
+    background-color: var(--foreground-color);
+    transform: scale(2);
+    border-radius: 50%;
+    z-index: 100;
+}
+
 .board-grid{
     display: block; 
     height: 85vh; 
-    width: 80vh;    
+    width: 80vh;  
+    margin: 8vh auto auto auto;  
     display: grid; 
-    grid-template-columns: auto repeat(24, 1vh 6vh) auto;
-    grid-template-rows: auto repeat(24, 1vh 6vh) auto;
-    outline: 1px solid yellow;
+    grid-template-columns: auto repeat(24, 1vh 8vh) auto;
+    grid-template-rows: auto repeat(24, 1vh 8vh) auto;
 }
