--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@
   --board-color: #f9e4d9;
   --drop-shadow: #08070833;
   --black-stone: #222;
+  --primary-highlight: #f0a0a0;
+  --secondary-highlight: #93a2e9;
   
   box-sizing: border-box;
 }
