--- a/styles/game.css
+++ b/styles/game.css
@@ -20,7 +20,7 @@
 }
 .board {
   box-shadow: -10px 2px 10px 10px var(--drop-shadow);
-  border: 17px solid var(--foreground-color);
+  border: 17px solid var(--bs-primary);
 }
 
 .square-decoration {
@@ -38,7 +38,7 @@
   height: calc(100% / 8);
   float: left;
   position: relative;
-  outline: 1px solid var(--foreground-color);
+  outline: 1px solid var(--bs-primary);
   background-color: var(--board-color);
 }
 
@@ -79,12 +79,12 @@
   margin: 0.2em 0;
   min-height: 1.5em;
   width: 130%;
-  background-color: var(--foreground-color);
+  background-color: var(--bs-primary);
   border-radius: 5em 0 0 5em;
 }
 
 .control-text {
-  color: var(--primary-text-color);
+  color: var(--bs-body-color);
   margin: 0.2em 0;
   min-width: 10em;
   text-transform: uppercase;
@@ -98,6 +98,7 @@
   align-items: center;
   background-color: transparent;
   border: none;
+  color: var(--bs-body-color);
 }
 
 @media (hover: hover) {
@@ -124,7 +125,7 @@
   min-height: 70px;
   padding-bottom: 5px;
   margin: auto;
-  border-bottom: solid 1px var(--primary-text-color);
+  border-bottom: solid 1px var(--bs-body-color);
 }
 
 .logo {
@@ -133,10 +134,11 @@
 }
 
 .logo span {
-  color: var(--foreground-color);
+  color: var(--bs-primary);
 }
 
 .link {
+  text-decoration: none;
   margin-left: 1.1rem;
 }
 
@@ -166,7 +168,7 @@
 }
 
 .score-item.turn {
-  background-color: var(--foreground-color);
+  background-color: var(--bs-primary);
 }
 
 .score-item-icon {
@@ -175,7 +177,7 @@
   width: 1.5rem;
   margin-right: 0.5rem;
   border-radius: 1rem;
-  background-color: var(--primary-text-color);
+  background-color: var(--bs-body-color);
 }
 
 .black .score-item-icon {
@@ -183,7 +185,7 @@
 }
 
 .white .score-item-icon {
-  background-color: var(--primary-text-color);
+  background-color: var(--bs-body-color);
 }
 
 .status {
@@ -260,7 +262,7 @@
 }
 
 .stone.white {
-  background-color: var(--primary-text-color);
+  background-color: var(--bs-body-color);
 }
 
 .stone.black {
